# MCP

./: .gitignore  README.md
mcp/: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
mcp pro/: README.md
mcp pro/MCP_HOST/templates/: index.html
mcp pro/MCP_SERVER/data/fitness_articles/: .gitkeep
mcp pro/MCP_SERVER/data/user_data/: .gitkeep
mcp/data/user_data/default_user/: query_history.json
mcp/docs/: index.md
mcp/mcp enabled/MCP_HOST/: app.py
mcp/mcp enabled/MCP_HOST/src/personal_fitness_assistant/: __init__.py  main.py  utils.py
mcp/mcp enabled/MCP_SERVER/: main.py
mcp/src/personal_fitness_assistant/: __init__.py  main.py  utils.py
mcp/templates/: index.html
mcp/tests/: __init__.py  test_main.py
